      return GL_PURGED_CONTEXT_RESET_NV immediately after application
      start-up if the system had previously been suspended.
    - Added support for the following GPUs: A100-PCIE-40GB,
      A100 Graphics Device.

  [ Luca Boccassi ]
  * Update nv-readme.ids.

  [ Andreas Beckmann ]
  * libcuda1: Add Provides: libcuda-11.1-1{,-i386}.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 13 Oct 2020 22:31:15 +0200

nvidia-graphics-drivers (455.23.04-1) experimental; urgency=medium

  * New upstream beta 455.23.04 (2020-09-17).
    - Added support for the following GPUs: GeForce RTX 3080, GeForce RTX 3090.
    - Fixed a bug that prevented 8K displays from being used in portrait
      orientation on Pascal and earlier GPUs.
    - Fixed a bug which caused excessive CPU usage in Vulkan applications
      which create a large number of VkFence objects. This was particularly
      prevalent in the Steam Play title Red Dead Redemption 2.
    - Added support for a new device-local VkMemoryType which is host-coherent
      and host-visible. This may result in improved performance in some
      applications. Applications which are known to benefit from this new
      VkMemoryType include: DXVK Title DiRT Rally 2.0, Steam Play Title
      DOOM: Eternal, and DXVK title World of Warcraft.
    - Fixed a bug that caused WebKit-based applications to crash when
      running on Wayland.
    - Fixed a bug that led to display corruption at some resolutions when
      using an NVIDIA-driven display as a PRIME Display Offload sink.
    - Fixed a bug in a SPIR-V optimization that may cause conditional blocks to
      not execute.
    - Fixed a bug where calls to vkGetRandROutputDisplayEXT with unexpected
      inputs would generate X11 protocol errors.
      (https://bugs.winehq.org/show_bug.cgi?id=49407)
    - Fixed a small memory leak during exit of the NVIDIA EGL driver.
    - Implemented support for the NVIDIA NGX Updater. See the "NGX" chapter in