@@ -16,6 +16,7 @@ nvidia-graphics-drivers (455.28-1) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
   * libcuda1: Add Provides: libcuda-11.1-1{,-i386}.
+  * Refresh patches.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 13 Oct 2020 22:31:15 +0200
 
